# modeonet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: fqo_unet.yaml  modeonet.yaml  paths.yaml
notebooks/: plate_paint.ipynb  plate_paint_google_colab.ipynb  test_results.ipynb
tests/: modeonet_test.py  modes_test.py  velocity_field_test.py
vibromodes/: config.py  globals.py  hdf5_dataset.py  kirchhoff.py  log.py  loss.py  metrics.py  modes.py  plotting.py  run.py  train.py  utils.py  velocity_field.py
vibromodes/models/: FQOUNet.py  ModeONet.py  __init__.py  nn.py
